Add tag process

--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,12 @@ name = "pypi"
 click = "*"
 piexif = "*"
 pyyaml = "*"
+py3exiv2 = "*"
 
 [dev-packages]
+pytest = "*"
+pylint = "*"
+pytest-mock = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
